--- a/css/estilo.css
+++ b/css/estilo.css
@@ -14,7 +14,7 @@ body {
 /*-----------------------------------------------Cabeçalho-------------------------------------------*/
 
 #cabecalho {
-    width: 100%; /*1365px*/
+    width: 100%;
     height: 80px;                    /* Altura do cabeçalho */
     background:rgb(4, 35, 82);     /* Cor de Fundo do cabeçalho */
     text-align: left;                /* Alinhamento central do texto- Cabeçalho */
@@ -29,41 +29,39 @@ body {
 /*-------------------------------------------Layout Principal----------------------------------------*/
 
 #conteudos {
-    width: 97%;
-    margin: 10px;
+    width: 100%;
+    height: 460px;
     min-width: 850px;
-    padding: 5px;
+    
 }
 
 #lateral-esquerda {
     width: 18%;
+    margin: 10px;
+    margin-left: 30px;
+    margin-right: 0;
     background: white;
-    margin: 5px;
     float: left;
 }
 
-#esquerda-bottom {
-    margin: 10px 1px;
+#conteudo-principal {
+    width: 50%;
+    height: 460px; 
+    margin: 10px;
+    margin-left: 0;
+    text-align: center;
+    background: #e6e6e6;
     float: left;   
 }
 
-#conteudo-principal {   
-    margin: 5px;
-    margin-left: -35px;
-    float: left; 
-}
-
-#lateral-direita { 
-    margin: 5px;
+#lateral-direita {
+    width: 20%; 
+    height: 460px;
+    margin: 10px;
+    text-align: center;
+    background: #e6e6e6;
     float: left;
-
 }
-
-#direita-bottom {
-    margin: 5px;
-    margin-left: 0px;
-}
-
 
 /*-------------------------------------------Fim Layout Principal------------------------------------*/
 
