--- a/css/estilo.css
+++ b/css/estilo.css
@@ -14,7 +14,7 @@ body {
 /*-----------------------------------------------Cabeçalho-------------------------------------------*/
 
 #cabecalho {
-    width: 100%;
+    width: 100%; /*1365px*/
     height: 80px;                    /* Altura do cabeçalho */
     background:rgb(4, 35, 82);     /* Cor de Fundo do cabeçalho */
     text-align: left;                /* Alinhamento central do texto- Cabeçalho */
@@ -29,39 +29,41 @@ body {
 /*-------------------------------------------Layout Principal----------------------------------------*/
 
 #conteudos {
-    width: 100%;
-    height: 460px;
+    width: 97%;
+    margin: 10px;
     min-width: 850px;
-    
+    padding: 5px;
 }
 
 #lateral-esquerda {
     width: 18%;
-    margin: 10px;
-    margin-left: 30px;
-    margin-right: 0;
     background: white;
+    margin: 5px;
     float: left;
 }
 
-#conteudo-principal {
-    width: 50%;
-    height: 460px; 
-    margin: 10px;
-    margin-left: 0;
-    text-align: center;
-    background: #e6e6e6;
+#esquerda-bottom {
+    margin: 10px 1px;
     float: left;   
 }
 
-#lateral-direita {
-    width: 20%; 
-    height: 460px;
-    margin: 10px;
-    text-align: center;
-    background: #e6e6e6;
-    float: left;
+#conteudo-principal {   
+    margin: 5px;
+    margin-left: -35px;
+    float: left; 
 }
+
+#lateral-direita { 
+    margin: 5px;
+    float: left;
+
+}
+
+#direita-bottom {
+    margin: 5px;
+    margin-left: 0px;
+}
+
 
 /*-------------------------------------------Fim Layout Principal------------------------------------*/
 
